# LunarLander_ddqn

./: .gitignore  7.7-7.12强化学习任务表.md  README.md  pyproject.toml  requirements.txt  实验分析汇总.md  强化学习LunarLander课程设计规划.md
configs/: proposed.yaml
outputs/double_dqn/: double_dqn_model.pth  train_log.csv
outputs/dqn/: dqn_model.pth  train_log.csv
outputs/dueling_ddqn/: dueling_ddqn_model.pth  train_log.csv
outputs/evaluation/: double_dqn_eval_episodes.csv  double_dqn_eval_summary.json  dqn_eval_episodes.csv  dqn_eval_summary.json  dueling_ddqn_eval_episodes.csv  dueling_ddqn_eval_summary.json  proposed_eval_episodes.csv  proposed_eval_summary.json
outputs/proposed/: proposed_checkpoint.pth  proposed_model.pth  train_log.csv  training_config.json
outputs/proposed_alpha03/: proposed_checkpoint.pth  proposed_model.pth  train_log.csv  training_config.json
outputs/videos/: dueling_ddqn_inference_best_summary.json
report/: 7.10_评估与推理记录.md  7.9_PER验收记录.md  PER实验记录.md  实验分析记录.md  评估与推理记录.md  课程设计报告框架.docx  课程设计报告框架.md  项目结构图.md
src/: agent.py  envs.py  evaluate.py  networks.py  plot_last100_reward.py  plot_results.py  random_agent.py  record_video.py  replay_buffer.py  test_env.py  train.py
