[project]
name = "lunarlander-ddqn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d]>=1.3.0",
    "imageio>=2.37.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pygame>=2.6.1",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "swig>=4.4.1",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.4",
]
